--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name='viewport' content="width=device-width, initial-scale=1">
     <title>Report</title>
     <link rel="stylesheet" type="text/css" href="styles.css"> <!-- 외부 CSS 파일 연결 -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
