--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name='viewport' content="width=device-width, initial-scale=1">
     <title>정상적인 통화입니다!</title>
 </head>
 <body>
